crates/toml_edit/tests/snapshots/invalid/string/basic-unknown-escape.stderr
TOML parse error at line 1, column 7
  |
1 | a = "\@"
  |       ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
